# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "overloadlib"
version = "0.1.1"
description = "overloadlib"
authors = ["Niclas D. Gesing <nicdomgesing@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/NicDom/overloadlib"
repository = "https://github.com/NicDom/overloadlib"
documentation = "https://overloadlib.readthedocs.io"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["python", "overload", "dispatch"]  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/NicDom/overloadlib/releases"

[tool.poetry.dependencies]
python = "^3.7.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.910"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.2.1"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.14.0"
flake8 = "^3.8.4"
black = "^21.9b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.5"
isort = {extras = ["colors"], version = "^5.9.3"}
pre-commit-hooks = "^3.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^3.0.1"
Pygments = "^2.7.1"
pydantic = "^1.8.2"

[tool.poetry.scripts]
overloadlib = "overloadlib.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["overloadlib"]
[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
# https://github.com/psf/black
target-version = ["py37"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
force_single_line = true
indent = 4
color_output = true
